# Maui.Diagnostics.Playground

./: .gitignore  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  Maui.Diagnostics.Playground.slnx  README.md  android-scenario.md  global.json
.github/skills/android-scenario/: SKILL.md
.github/skills/android-scenario/assets/: report-template.md
.github/skills/android-scenario/references/: scenarios.md
.github/skills/android-scenario/scripts/: analyze-crash.cs  drive-scenario.ps1  run-cell.ps1
.github/workflows/: build-mobile.yml
native/android/: build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
native/android/crashnativekit/: build.gradle.kts
native/android/crashnativekit/src/main/cpp/: CMakeLists.txt  crash_native_kit.cpp
native/apple/: project.yml
native/apple/CrashNativeKit.xcodeproj/: project.pbxproj
native/apple/Sources/: CrashNativeKit.h  CrashNativeKit.m
src/Maui.Diagnostics.Playground/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MainPage.xaml  MainPage.xaml.cs  Maui.Diagnostics.Playground.csproj  MauiProgram.cs
src/Maui.Diagnostics.Playground.NativeAndroidBinding/: Maui.Diagnostics.Playground.NativeAndroidBinding.csproj
src/Maui.Diagnostics.Playground.NativeAppleBinding/: ApiDefinition.cs  Maui.Diagnostics.Playground.NativeAppleBinding.csproj  StructsAndEnums.cs
src/Maui.Diagnostics.Playground/Diagnostics/: DiagnosticFact.cs  DiagnosticsSelfReportService.cs  DiagnosticsSummary.cs  IDiagnosticsSelfReportService.cs
(+15 files in other folders)
